[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["json"] }
colored = "2"
mime = "0.3"
tokio = { version = "1", features = ["full"]}
anyhow = "1"
jsonxf = "1.1.1"